tried to fix aligned buttons

--- a/code/style.css
+++ b/code/style.css
@@ -17,7 +17,6 @@
 body {
   font-family: 'Nunito Sans', sans-serif;
   background-color: #bae1ff;
-  font-size: var(--paragraph)
 }
 
 h2 {
@@ -111,15 +110,14 @@ main {
   margin-right: auto;
   margin-left: auto;
   padding-bottom: 1.5rem;
+  text-align: center;
 }
 
 .welcome div h1 {
-  text-align: center;
   padding: 1rem;
 }
 
 .welcome div p {
-  text-align: center;
   line-height: 1.3;
 }
 
@@ -140,7 +138,7 @@ main {
   border-radius: 0.5rem;
 }
 
-.main-article-content {
+.article-content {
   text-align: center;
 }
 
@@ -150,6 +148,7 @@ main {
   border-radius: 0.2rem;
   background-color: #6ec0ff;
   margin-top: 0.3rem;
+  text-align: center;
 }
 
 /*End of main-article section*/
@@ -176,11 +175,7 @@ main {
   max-width: 100%;
   object-fit: cover;
   border-radius: 0.5rem;
-  max-height: 250px;
-}
-
-.article-content {
-  text-align: center;
+  max-height: 260px;
 }
 
 footer {
@@ -203,15 +198,12 @@ footer {
 }
 
 @media (min-width: 667px) and (max-width: 1024px) {
+
   .logo-container {
     margin-left: 25px;
   }
 
   .logo {
-    font-size: 20px;
-  }
-
-  .article-link {
     font-size: 20px;
   }
 
@@ -276,15 +268,11 @@ footer {
 
   .article-picture img {
     max-height: 300px;
+    object-fit: scale-down;
   }
 
   .footer-container {
     height: 100px;
-  }
-
-  .name,
-  .follow-text {
-    font-size: 1.2rem;
   }
 
   .linkedin-logo {
@@ -293,6 +281,7 @@ footer {
 }
 
 @media (min-width: 1025px) {
+
   .logo-container {
     margin-left: 30px;
   }
